[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryptachain"
version = "0.1.0"
description = "Official Python SDK for the CryptaChain API — blockchain data, pricing, FX, screening"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "CryptaCount Luxembourg S.à r.l." }]
keywords = ["cryptachain", "blockchain", "crypto", "pricing", "fx", "screening", "web3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
async = ["httpx[http2]"]
dev = ["pytest", "pytest-asyncio", "mypy", "ruff", "respx"]

[project.urls]
Documentation = "https://docs.cryptachain.com/sdk/python"
Repository = "https://github.com/cryptachain/cryptachain-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptachain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.ruff]
target-version = "py310"
line-length = 100
